[gd_scene load_steps=3 format=3 uid="uid://bsuc30gsicn62"]

[ext_resource type="Script" path="res://Scenes/occupation_widget.gd" id="1_cxg4i"]

[sub_resource type="LabelSettings" id="LabelSettings_3wdpl"]
font_color = Color(0, 0, 0, 1)

[node name="OccupationWidget" type="Node2D"]
script = ExtResource("1_cxg4i")

[node name="BorderRect" type="ColorRect" parent="."]
offset_right = 48.0
offset_bottom = 32.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="InnerRect" type="ColorRect" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 24.0
mouse_filter = 2

[node name="Label" type="Label" parent="."]
offset_left = 8.0
offset_top = -8.0
offset_right = 40.0
offset_bottom = 40.0
text = "100"
label_settings = SubResource("LabelSettings_3wdpl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 48.0
offset_bottom = 32.0
mouse_filter = 2

[connection signal="gui_input" from="TextureRect" to="." method="_on_texture_rect_gui_input"]
